Fixes in contact and code alignment for mobile

--- a/themes/coder-portfolio/assets/css/syntax.css
+++ b/themes/coder-portfolio/assets/css/syntax.css
@@ -193,5 +193,5 @@ pre.line-numbers > code {
 }
 
 pre.line-numbers {
-  padding-left: 3em !important;
+  padding-left: 1.6em !important;
 }
